@@ -1,5 +1,8 @@
 2007-02-06  Martin Mares  <mj@ucw.cz>
 
+	* Replaced bzero() by memset() everywhere, it's better to lose a tiny
+	bit of readability than maintain hacks to make it work on various systems.
+
 	* lib/configure: tr on Solaris is a bit weird and it requires `[A-Z]'
 	instead of `A-Z'. Fortunately, the extra brackets don't hurt otherwise.
 
